<resources>
    <string name="version_code">版本：1.01</string>
    <string name="app_name">天气达人</string>
    <string name="app_english_name">LoveWeather</string>
    <string name="loading">正在加载</string>
    <string name="search_empty_tips">抱歉,没有匹配到任何结果</string>
    <string name="locating">正在定位...</string>
    <string name="loading_voice">正在加载音频，请稍后...</string>
    <string name="logo_words">爱天气，爱生活</string>

    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="about_content">鸣谢：\n 感谢placeImg提供的网络背景图片支持;\n 感谢IconFinder提供的图标;\n
        感谢百度定位SDK提供定位支持. \n\n合作与发展：\n
        本应用所有源码对外开放，如果您想了解更多关于本应用的信息，请访问下面开源地址，欢迎您对本应用进行更深入的开发。如果您不是开发人员，但有更好的想法请通过下面联系方式联系作者
    </string>
    <string name="contact">联系作者: 2216274479@qq.com</string>
    <string name="open_source">开源地址:https://github.com/HudsonAndroid/LoveWeather</string>
    <string name="permission_tips">您使用本应用需要开启如下权限：\n1.定位权限\n2.文件写入与读取权限\n3.录音权限\n请同意后继续使用</string>

</resources>
