<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hudson.loveweather.ui.activity.AboutActivity">


    <LinearLayout
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
                  android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/small_margin"
            android:textSize="@dimen/big_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:text="@string/version_code"
            android:textColor="@color/gray"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>

    </LinearLayout>


    <TextView
        android:layout_marginTop="@dimen/daily_close_vertical_margin"
        android:textSize="@dimen/edit_text_size"
        android:textColor="@color/white"
        android:autoLink="email|phone|web"
        android:layout_marginLeft="@dimen/view_internal_margin"
        android:layout_marginRight="@dimen/view_internal_margin"
        android:text="@string/about_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



    <TextView
        android:layout_marginTop="@dimen/small_margin"
        android:textSize="@dimen/edit_text_size"
        android:textColor="@color/white"
        android:layout_marginLeft="@dimen/view_internal_margin"
        android:autoLink="email|phone|web"
        android:text="@string/contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="@dimen/little_margin"
        android:textSize="@dimen/edit_text_size"
        android:textColor="@color/white"
        android:layout_marginLeft="@dimen/view_internal_margin"
        android:autoLink="email|phone|web"
        android:text="@string/open_source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
